cfn-templates/cfn-network-template.json
{  
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Network template",
  "Resources":{  
    "zone8llorg":{  
      "Type":"AWS::Route53::HostedZone",
      "Properties":{  
        "Name": "8ll.org",
        "HostedZoneConfig":{  
          "Comment":"My 8ll domain zone"
        }
      }
    },
    "vpcll":{  
      "Type":"AWS::EC2::VPC",
      "Properties":{  
        "CidrBlock":"10.0.0.0/16",
        "InstanceTenancy":"default",
        "EnableDnsSupport":"true",
        "EnableDnsHostnames":"true"
      }
    },
    "subnet2a":{  
      "Type":"AWS::EC2::Subnet",
      "Properties":{  
        "CidrBlock":"10.0.0.0/27",
        "AvailabilityZone":"us-west-2a",
        "VpcId":{  
          "Ref":"vpcll"
        }
      }
    },
    "subnet2b":{  
      "Type":"AWS::EC2::Subnet",
      "Properties":{  
        "CidrBlock":"10.0.1.0/27",
        "AvailabilityZone":"us-west-2b",
        "VpcId":{  
          "Ref":"vpcll"
        }
      }
    },
    "dhcpopt1":{  
      "Type":"AWS::EC2::DHCPOptions",
      "Properties":{  
        "DomainName":"8ll.org",
        "DomainNameServers":[  
          "AmazonProvidedDNS"
        ]
      }
    },
    "dchpassoc1":{  
      "Type":"AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties":{  
        "VpcId":{  
          "Ref":"vpcll"
        },
        "DhcpOptionsId":{  
          "Ref":"dhcpopt1"
        }
      }
    },
    "routetable1":{  
      "Type":"AWS::EC2::RouteTable",
      "Properties":{  
        "VpcId":{  
          "Ref":"vpcll"
        }
      }
    },
    "routeableassoc1":{  
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{  
        "RouteTableId":{  
          "Ref":"routetable1"
        },
        "SubnetId":{  
          "Ref":"subnet2a"
        }
      }
    },
    "routetable2":{  
      "Type":"AWS::EC2::RouteTable",
      "Properties":{  
        "VpcId":{  
          "Ref":"vpcll"
        }
      }
    },
    "routetableassoc2":{  
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{  
        "RouteTableId":{  
          "Ref":"routetable2"
        },
        "SubnetId":{  
          "Ref":"subnet2b"
        }
      }
    },
    "acl1":{  
      "Type":"AWS::EC2::NetworkAcl",
      "Properties":{  
        "VpcId":{  
          "Ref":"vpcll"
        }
      }
    },
    "gw1":{  
      "Type":"AWS::EC2::InternetGateway"
    },
    "gwattach1":{  
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Properties":{  
        "VpcId":{  
          "Ref":"vpcll"
        },
        "InternetGatewayId":{  
          "Ref":"gw1"
        }
      }
    },
    "route1":{  
      "Type":"AWS::EC2::Route",
      "Properties":{  
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{  
          "Ref":"routetable1"
        },
        "GatewayId":{  
          "Ref":"gw1"
        }
      }
    },
    "route2":{  
      "Type":"AWS::EC2::Route",
      "Properties":{  
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{  
          "Ref":"routetable2"
        },
        "GatewayId":{  
          "Ref":"gw1"
        }
      }
    }
  }
}
